# razer-tray-battery

./: .clang-format  .clangd  .gitattributes  CMakeLists.txt
hidapi/x64/: hidapi.lib
hidapi/x86/: hidapi.lib
res/: resources.qrc
src/: common.h  main.cpp  razer_report.cpp  razer_report.h  tray_icon.cpp  tray_icon.h  usb_device.cpp  usb_device.h  window.cpp  window.h
